# openapi-specifications/api.swagger.json
@@ -67,7 +67,7 @@
                         "content": {
                             "application/json": {
                                 "schema": {
-                                    "$ref": "#/components/schemas/main.DirectionsResponse"
+                                    "$ref": "#/components/schemas/util.DirectionsResponse"
                                 }
                             }
                         }
@@ -77,7 +77,7 @@
                         "content": {
                             "application/json": {
                                 "schema": {
-                                    "$ref": "#/components/schemas/main.ORSErrorResponse"
+                                    "$ref": "#/components/schemas/util.ORSErrorResponse"
                                 }
                             }
                         }
@@ -87,7 +87,7 @@
                         "content": {
                             "application/json": {
                                 "schema": {
-                                    "$ref": "#/components/schemas/main.ORSErrorResponse"
+                                    "$ref": "#/components/schemas/util.ORSErrorResponse"
                                 }
                             }
                         }
@@ -97,7 +97,7 @@
                         "content": {
                             "application/json": {
                                 "schema": {
-                                    "$ref": "#/components/schemas/main.ORSErrorResponse"
+                                    "$ref": "#/components/schemas/util.ORSErrorResponse"
                                 }
                             }
                         }
@@ -153,7 +153,7 @@
                                 "schema": {
                                     "type": "array",
                                     "items": {
-                                        "$ref": "#/components/schemas/main.SearchResponse"
+                                        "$ref": "#/components/schemas/util.SearchResponse"
                                     }
                                 }
                             }
@@ -164,7 +164,7 @@
                         "content": {
                             "application/json": {
                                 "schema": {
-                                    "$ref": "#/components/schemas/main.ErrorResponse"
+                                    "$ref": "#/components/schemas/util.ErrorResponse"
                                 }
                             }
                         }
@@ -174,7 +174,7 @@
                         "content": {
                             "application/json": {
                                 "schema": {
-                                    "$ref": "#/components/schemas/main.ErrorResponse"
+                                    "$ref": "#/components/schemas/util.ErrorResponse"
                                 }
                             }
                         }
@@ -184,7 +184,45 @@
                         "content": {
                             "application/json": {
                                 "schema": {
-                                    "$ref": "#/components/schemas/main.ErrorResponse"
+                                    "$ref": "#/components/schemas/util.ErrorResponse"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/violation_rates": {
+            "get": {
+                "description": "Returns violation rates for specific coordinates. If session_id is not provided, returns nil.",
+                "tags": [
+                    "get"
+                ],
+                "summary": "Get violation rates",
+                "parameters": [
+                    {
+                        "example": "session_id=53238c22-12ac-8ff8-fcdd-738d30a780df",
+                        "description": "Session ID",
+                        "name": "session_id",
+                        "in": "query",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "List of violation rates for given coordinates",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "object",
+                                    "additionalProperties": {
+                                        "type": "array",
+                                        "items": {
+                                            "$ref": "#/components/schemas/util.ViolationRate"
+                                        }
+                                    }
                                 }
                             }
                         }
@@ -200,57 +238,46 @@
     ],
     "components": {
         "schemas": {
-            "main.DirectionsResponse": {
-                "description": "OpenRouteServiceのGeoJSONレスポンスに加え、警告地点(WarningPoints)と快適度スコア(ComfortScore)を含む",
+            "util.DirectionsResponse": {
                 "type": "object",
                 "properties": {
                     "bbox": {
-                        "description": "Bounding box",
                         "type": "array",
                         "items": {
                             "type": "number"
                         }
                     },
                     "comfort_score": {
-                        "description": "追加: 快適度スコア(0-100)",
+                        "description": "XXX 追加項目, 0-100のスコア",
                         "type": "integer"
                     },
                     "features": {
-                        "description": "Route features",
                         "type": "array",
                         "items": {
-                            "$ref": "#/components/schemas/main.ORSFeature"
-                        }
-                    },
-                    "intersection_violation_rate": {
-                        "description": "XXX 追加項目",
-                        "type": "array",
-                        "items": {
-                            "$ref": "#/components/schemas/main.Intersection_Violation_Rate"
+                            "$ref": "#/components/schemas/util.ORSFeature"
                         }
                     },
                     "metadata": {
-                        "description": "Metadata",
-                        "allOf": [
-                            {
-                                "$ref": "#/components/schemas/main.ORSMetadata"
-                            }
-                        ]
+                        "$ref": "#/components/schemas/util.ORSMetadata"
+                    },
+                    "session_id": {
+                        "description": "XXX 追加項目, セッションID",
+                        "type": "string"
                     },
                     "type": {
-                        "description": "GeoJSON type",
+                        "description": "https://openrouteservice.org/dev/#/api-docs/v2/directions/{profile}/geojson/get\nのレスポンスを構造体に",
                         "type": "string"
                     },
                     "warning_points": {
-                        "description": "追加: 警告地点",
+                        "description": "XXX 追加項目",
                         "type": "array",
                         "items": {
-                            "$ref": "#/components/schemas/main.WarningPoint"
+                            "$ref": "#/components/schemas/util.WarningPoint"
                         }
                     }
                 }
             },
-            "main.ErrorResponse": {
+            "util.ErrorResponse": {
                 "type": "object",
                 "properties": {
                     "error": {
@@ -263,24 +290,7 @@
                     }
                 }
             },
-            "main.Intersection_Violation_Rate": {
-                "type": "object",
-                "properties": {
-                    "coordinate": {
-                        "type": "array",
-                        "items": {
-                            "type": "number"
-                        }
-                    },
-                    "intersection": {
-                        "type": "string"
-                    },
-                    "rate_score": {
-                        "type": "number"
-                    }
-                }
-            },
-            "main.ORSEngine": {
+            "util.ORSEngine": {
                 "type": "object",
                 "properties": {
                     "build_date": {
@@ -297,7 +307,7 @@
                     }
                 }
             },
-            "main.ORSErrorResponse": {
+            "util.ORSErrorResponse": {
                 "type": "object",
                 "properties": {
                     "error": {
@@ -313,7 +323,7 @@
                     }
                 }
             },
-            "main.ORSFeature": {
+            "util.ORSFeature": {
                 "type": "object",
                 "properties": {
                     "bbox": {
@@ -323,27 +333,27 @@
                         }
                     },
                     "geometry": {
-                        "$ref": "#/components/schemas/main.ORSGeometry"
+                        "$ref": "#/components/schemas/util.ORSGeometry"
                     },
                     "properties": {
-                        "$ref": "#/components/schemas/main.ORSFeatureProperties"
+                        "$ref": "#/components/schemas/util.ORSFeatureProperties"
                     },
                     "type": {
                         "type": "string"
                     }
                 }
             },
-            "main.ORSFeatureProperties": {
+            "util.ORSFeatureProperties": {
                 "type": "object",
                 "properties": {
                     "segments": {
                         "type": "array",
                         "items": {
-                            "$ref": "#/components/schemas/main.ORSSegment"
+                            "$ref": "#/components/schemas/util.ORSSegment"
                         }
                     },
                     "summary": {
-                        "$ref": "#/components/schemas/main.ORSSummary"
+                        "$ref": "#/components/schemas/util.ORSSummary"
                     },
                     "way_points": {
                         "type": "array",
@@ -353,7 +363,7 @@
                     }
                 }
             },
-            "main.ORSGeometry": {
+            "util.ORSGeometry": {
                 "type": "object",
                 "properties": {
                     "coordinates": {
@@ -371,17 +381,17 @@
                     }
                 }
             },
-            "main.ORSMetadata": {
+            "util.ORSMetadata": {
                 "type": "object",
                 "properties": {
                     "attribution": {
                         "type": "string"
                     },
                     "engine": {
-                        "$ref": "#/components/schemas/main.ORSEngine"
+                        "$ref": "#/components/schemas/util.ORSEngine"
                     },
                     "query": {
-                        "$ref": "#/components/schemas/main.ORSQuery"
+                        "$ref": "#/components/schemas/util.ORSQuery"
                     },
                     "service": {
                         "type": "string"
@@ -391,7 +401,7 @@
                     }
                 }
             },
-            "main.ORSQuery": {
+            "util.ORSQuery": {
                 "type": "object",
                 "properties": {
                     "coordinates": {
@@ -415,7 +425,7 @@
                     }
                 }
             },
-            "main.ORSSegment": {
+            "util.ORSSegment": {
                 "type": "object",
                 "properties": {
                     "distance": {
@@ -427,12 +437,12 @@
                     "steps": {
                         "type": "array",
                         "items": {
-                            "$ref": "#/components/schemas/main.ORSStep"
+                            "$ref": "#/components/schemas/util.ORSStep"
                         }
                     }
                 }
             },
-            "main.ORSStep": {
+            "util.ORSStep": {
                 "type": "object",
                 "properties": {
                     "distance": {
@@ -458,7 +468,7 @@
                     }
                 }
             },
-            "main.ORSSummary": {
+            "util.ORSSummary": {
                 "type": "object",
                 "properties": {
                     "distance": {
@@ -469,7 +479,7 @@
                     }
                 }
             },
-            "main.SearchResponse": {
+            "util.SearchResponse": {
                 "type": "object",
                 "properties": {
                     "addresstype": {
@@ -533,7 +543,24 @@
                     }
                 }
             },
-            "main.WarningPoint": {
+            "util.ViolationRate": {
+                "type": "object",
+                "properties": {
+                    "coordinate": {
+                        "type": "array",
+                        "items": {
+                            "type": "number"
+                        }
+                    },
+                    "message": {
+                        "type": "string"
+                    },
+                    "violation_rate": {
+                        "type": "number"
+                    }
+                }
+            },
+            "util.WarningPoint": {
                 "type": "object",
                 "properties": {
                     "coordinate": {
